update: написал две секции

--- a/new-site/indeh.html
+++ b/new-site/indeh.html
@@ -9,10 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.css">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/reset.css"> -->
+    <!-- <link rel="stylesheet" href="css/slick.css"> -->
+    <!-- <link rel="stylesheet" href="css/jquery.fancybox.css"> -->
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <body>
@@ -50,6 +50,176 @@
             </a>
         </div>
     </header>
+
+
+    <main class="main">
+        <section class="hero">
+            <div class="container">
+                <div class="hero__top">
+                    <ul class="top__list">
+                        <li class="top__item">
+                            <h1 class="top__title">
+                                Эксклюзивная и нестандартная мебель для дома
+                            </h1>
+                        </li>
+                        <li class="top__item">
+                            <button class="top__btn">
+                                <a class="top__link" href="#">Заказать проект</a>
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+                <div class="hero__footer">
+                    <div class="hero__left">
+                        <ul class="left__list">
+                            <li class="left__item">
+                                <p class="hero__descr">
+                                    Мы&nbsp;можем произвести любую мебель для вашего проекта и&nbsp;найти
+                                    производственное
+                                    решение любой задумки.
+                                </p>
+                            </li>
+                            <li class="left__item">
+                                <img src="" alt="интерьер" class="left__image">
+                            </li>
+                            <li class="left__item">
+                                <h2 class="left__title">
+                                    Более 5&nbsp;лет создаем мебель для вашего комфорта
+                                </h2>
+                            </li>
+                            <li class="left__item">
+                                <h2 class="left__title">
+                                    Как мы&nbsp;работаем
+                                </h2>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="hero__right">
+                        <ul class="right__list">
+                            <li class="right__item">
+                                <img src="" alt="интерьер" class="right__image">
+                            </li>
+                            <li class="right__item">
+                                <div class="right__text">
+                                    <p class="right__descr">
+                                        Мы&nbsp;&mdash; команда профессионалов, которые могут произвести любую мебель
+                                        для вашего проекта, а&nbsp;также найти производственное решение любой задумки.
+                                    </p>
+                                    <p class="right__descr">
+                                        Наша основная цель&nbsp;&mdash; реализовывать самые смелые задумки,
+                                        и&nbsp;делать это качественно и&nbsp;аккуратно.
+                                    </p>
+                                    <p class="right__descr">
+                                        В&nbsp;качестве материалов мы&nbsp;используем натуральные&nbsp;&mdash; стекло,
+                                        дерево, бетон, камень, металл и&nbsp;эпоксидную смолу.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="right__item">
+                                <div class="complited">
+                                    <div class="complited__value">
+                                        1 год
+                                    </div>
+                                    <div class="complited__descr">
+                                        гарантии на всю продукцию
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="right__item">
+                                <div class="complited__value">
+                                    300+
+                                </div>
+                                <div class="complited__descr">
+                                    выполненных проектов
+                                </div>
+                            </li>
+                            <li class="right__item">
+                                <div class="complited__value">
+                                    15 дней
+                                </div>
+                                <div class="complited__descr">
+                                    срок производства
+                                </div>
+                            </li>
+                            <li class="right__item">
+                                <p class="right__descr">
+                                    Алгоритм работы с&nbsp;нами для удобства и&nbsp;понимания проекта
+                                </p>
+                            </li>
+                            <li class="right__item">
+                                <h2 class="left__title">
+                                    Идея
+                                </h2>
+                                <p class="right__deskr">
+                                    Клиент приходит к&nbsp;нам с&nbsp;идеей. Это может быть изображение/ эскиз или
+                                    другой референс. А&nbsp;мы&nbsp;думаем над тем, как это реализовать, делаем
+                                    технические чертежи и&nbsp;предлагаем решения по&nbsp;материалам.
+                                </p>
+                            </li>
+                            <li class="right__item">
+                                <h2 class="left__title">
+                                    Техническое задание
+                                </h2>
+                                <p class="right__deskr">
+                                    Вместе с&nbsp;клиентом формулируем корректное&nbsp;ТЗ, которое включает в&nbsp;себя
+                                    визуализацию изделия, эскизный чертёж с&nbsp;габаритами, информацию
+                                    по&nbsp;материалам и&nbsp;отделке, срок реализации проекта и&nbsp;другие
+                                    обязательные пункты.
+                                </p>
+                            </li>
+                            <li class="right__item">
+                                <h2 class="left__title">
+                                    Коммерческое предложение
+                                </h2>
+                                <p class="right__deskr">
+                                    ППредпочтительно используем натуральные материалы. Но&nbsp;любую смету можем
+                                    оптимизировать, упростив материалы или конструктив. Сможем подстроиться под бюджет
+                                    клиента и&nbsp;согласуем коммерческое предложение
+                                </p>
+                            </li>
+                            <li class="right__item">
+                                <h2 class="left__title">
+                                    Подготовка рабочего проекта
+                                </h2>
+                                <p class="right__deskr">
+                                    Создадим рабочую документацию и&nbsp;чертежи. Это фундамент качественного
+                                    производства. На&nbsp;этом этапе утверждаем с&nbsp;клиентом все габариты
+                                    и&nbsp;материалы, чертежи и&nbsp;приступаем к&nbsp;производству.
+                                </p>
+                            </li>
+                            <li class="right__item">
+                                <h2 class="left__title">
+                                    Производство и&nbsp;монтаж
+                                </h2>
+                                <p class="right__deskr">
+                                    Производство занимает от&nbsp;15&nbsp;рабочих дней, в&nbsp;зависимости
+                                    от&nbsp;сложности и&nbsp;объёма. Монтажом тоже занимаемся самостоятельно. Ведь
+                                    мы&nbsp;это сделаем быстро и&nbsp;аккуратно.
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="portfolio">
+            <div class="container">
+                <h2 class="portfolio__title">
+                    Проекты  
+                </h2>
+                <div class="portfolio__images">
+                    <img src="" alt="интерьер" class="portfolio__image">
+                    <img src="" alt="интерьер" class="portfolio__image">
+                    <img src="" alt="интерьер" class="portfolio__image">
+                    <img src="" alt="интерьер" class="portfolio__image">
+                    <img src="" alt="интерьер" class="portfolio__image">
+                    <img src="" alt="интерьер" class="portfolio__image">
+                </div>
+            </div>
+        </section>
+    </main>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
